--- a/defriendr.html
+++ b/defriendr.html
@@ -12,7 +12,7 @@
     <!-- Material Design Bootstrap -->
     <link href="css/mdb.min.css" rel="stylesheet">
     <!-- Your custom styles (optional) -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="public/css/styles.css" rel="stylesheet">
 
 </head>
 
@@ -34,10 +34,18 @@
 </nav>
 
 <div class="container-fluid">
-    <div class="row main-content">
-        <div class="col-lg-4"</div>
-            <div class="panel panel-default flashcard">
-                <img id="profile-picture" src="" alt="friends-profile-photo">
+    <div class="row spacer"></div>
+        <div class="row main-content">
+            <div class="col-lg-4"></div>
+                <div class="col-lg-4">
+                    <div class="panel panel-header friend-name">
+                    </div>
+                        <div class="panel panel-default text-center flashcard">
+                            <img id="profile-picture" src="" alt="friend's-profile-photo">
+                        
+                        </div>
+                </div>
+        </div>
 
 
 
