html and basic css done

--- a/defriendr.html
+++ b/defriendr.html
@@ -30,8 +30,30 @@
                           </button>
                 <a class="navbar-brand" href="#">
                     <p id="title"> defriendr </p>
-                                <!-- <img id="favicon-brand" alt="Brand" src="favicons/favicon-96x96.png"> -->
-                          </a>
+                </a>
+                <table cellspacing="0" role="presentation" class="login">
+                    <tbody>
+                        <tr>
+                            <td class="html7magic"></td>
+                            <td class="html7magic"></td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p id="email-label"> Email or Phone:<br>
+                                <input type="email" class="inputtext" name="email" id="email" tabindex="1" data-testid="royal_email">
+                            </td>
+                            <td>
+                                <p id="password-label"> Password:<br>
+                                <input type="password" class="inputtext" name="pass" id="password" tabindex="2" data-testid="royal_pass">
+                            </td>
+                            <td>
+                                <label class="btn btn-default" id="loginButton">Login</label>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                </form>
+                </div>
             </div>
         </div>
     </nav>
