--- a/defriendr.html
+++ b/defriendr.html
@@ -62,15 +62,23 @@
         <div class="row spacer"></div>
         <div class="row main-content">
             <div class="col-lg-4"></div>
-            <div class="col-lg-4">
-                <div class="panel panel-header friend-name">
-                </div>
-                <div class="panel panel-default text-center flashcard">
-                    <img id="profile-picture" src="" alt="friend's-profile-photo">
-
+                <div class="text-center">
+                    <div class="col-lg-4">
+                        <div class="flip-container">
+                            <div class="flipper" ontouchstart="this.classList.toggle('click');">
+                                <div class="front">
+                                    <div class="panel panel-default text-center flashcard">
+                                        <div class="panel panel-header friend-name">
+                                            Name
+                                        </div>
+                                        <img id="profile-picture" src="" alt="friend's-profile-photo">
+                                    </div>    
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
 
 
 
