Wednesday evening update

--- a/defriendr.html
+++ b/defriendr.html
@@ -47,7 +47,7 @@
                                     <input type="password" class="inputtext" name="pass" id="password" tabindex="2" data-testid="royal_pass">
                             </td>
                             <td>
-                                <label class="btn btn-default" id="loginButton">Login</label>
+                                <button type="submit" class="btn btn-default" id="loginButton">Login</button>
                             </td>
                         </tr>
                     </tbody>
@@ -65,7 +65,7 @@
                 bullshit
             </div> -->
             <div class="col-lg-1 col-lg-offset-3">
-                    <button  type="button" class="btn btn-default btn-arrow-left"><span class="glyphicon glyphicon-menu-left"</span></button>  
+                    <button  type="button" class="btn btn-outline-primary btn-rounded btn-arrow-left"><span class="glyphicon glyphicon-menu-left"</span></button>  
                         <!-- ontouchstart="this.classList.toggle('active');" -->
                     </div> 
                 <div class="col-lg-4 align-items-center">                         
@@ -83,7 +83,7 @@
                             </div>
                             <div class="back">
                                 <div class="panel panel-default backside-hints">
-                                    <div class="panel panel-header hints">
+                                    <div class="panel panel-header hints text-center">
                                         Hints
                                     </div>
                                     <div class="panel panel-body hints">
@@ -98,11 +98,30 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- <div class="back2">
+                                    <div class="panel panel-default backside-defriend">
+                                        <div class="panel panel-header defriend">
+                                            defriend Options
+                                        </div>
+                                        <div class="panel panel-body defriend-Options">
+                                            <p class="different-Options align-center">
+                                                1. Would You Like To Add This Friend To Your "defriend" List? <br>                                  
+                                                <input type="text"><br>
+                                                2. Would You Like To Add This Friend To Your "Block" List? <br>
+                                                <input type="text"><br>
+                                                3. Skip This Friend For Now <br>
+                                                <button type="button">
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div> -->
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-1 right-Button">
-                <button id="right" type="button" class="btn btn-default btn-arrow-right"><span class="glyphicon glyphicon-menu-right"</span></button>      
+                    <div class="text-center">
+                <button id="right" type="button" class="btn btn-outline-primary btn-rounded btn-arrow-right"><span class="glyphicon glyphicon-menu-right"</span></button>      
+                    </div>
                 </div>    
         </div>
 
