--- a/defriendr.html
+++ b/defriendr.html
@@ -98,7 +98,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- <div class="back2">
+                            <div class="back2">
                                     <div class="panel panel-default backside-defriend">
                                         <div class="panel panel-header defriend">
                                             defriend Options
@@ -114,7 +114,7 @@
                                             </p>
                                         </div>
                                     </div>
-                                </div> -->
+                                </div>
                         </div>
                     </div>
                 </div>
@@ -140,6 +140,7 @@
         <!-- MDB core JavaScript -->
         <script type="text/javascript" src="MDB/js/mdb.min.js"></script>
         <script src="public/js/app.js"></script>
+        <!-- <script type="text/javascript" src="public/js/backsideContent.js"></script> -->
 </body>
 
 </html>
