--- a/defriendr.html
+++ b/defriendr.html
@@ -98,6 +98,16 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="front2">
+                                <div class="panel panel-default text-center flashcard">
+                                    <div class="panel panel-header friend-name">
+                                        Name
+                                    </div>
+                                    <div class="panel panel-body profile-photo">
+                                        <img id="profile-picture" src="" alt="friend's-profile-photo">
+                                    </div>
+                                </div>
+                            </div>
                             <div class="back2">
                                     <div class="panel panel-default backside-defriend">
                                         <div class="panel panel-header defriend">
