--- a/defriendr.html
+++ b/defriendr.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-toggleable-md navbar-toggleable-sm navbar-toggleable-xs">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
@@ -64,11 +64,11 @@
             <!-- <div class="col-4 spacer">
                 bullshit
             </div> -->
-            <div class="col-lg-1 col-lg-offset-3">
+            <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-lg-offset-3 col-md-offset-3 col-sm-offset-2 col-xs-offset-2">
                     <button  type="button" class="btn btn-outline-primary btn-rounded btn-arrow-left"><span class="glyphicon glyphicon-menu-left"</span></button>  
                         <!-- ontouchstart="this.classList.toggle('active');" -->
                     </div> 
-                <div class="col-lg-4 align-items-center">                         
+                <div class="col-xs-6 col-sm-5 col-md-4 col-lg-4 align-items-center">                         
                     <div class="flip-container">
                         <div class="flipper">
                             <div class="front">
@@ -128,7 +128,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-1 right-Button">
+                <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 right-Button">
                     <div class="text-center">
                 <button id="right" type="button" class="btn btn-outline-primary btn-rounded btn-arrow-right"><span class="glyphicon glyphicon-menu-right"</span></button>      
                     </div>
