--- a/defriendr.html
+++ b/defriendr.html
@@ -23,11 +23,11 @@
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
                     aria-expanded="false">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                          </button>
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
                 <a class="navbar-brand" href="#">
                     <p id="title"> defriendr </p>
                 </a>
@@ -39,11 +39,13 @@
                         </tr>
                         <tr>
                             <td>
-                                <p id="email-label">  Email or Phone:<br>
+                                <p id="email-label"> Email or Phone:
+                                    <br>
                                     <input type="email" class="inputtext" name="email" id="email" tabindex="1" data-testid="royal_email">
                             </td>
                             <td>
-                                <p id="password-label"> Password:<br>
+                                <p id="password-label"> Password:
+                                    <br>
                                     <input type="password" class="inputtext" name="pass" id="password" tabindex="2" data-testid="royal_pass">
                             </td>
                             <td>
@@ -65,74 +67,72 @@
                 bullshit
             </div> -->
             <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-lg-offset-3 col-md-offset-3 col-sm-offset-2 col-xs-offset-2">
-                    <button  type="button" class="btn btn-outline-primary btn-rounded btn-arrow-left"><span class="glyphicon glyphicon-menu-left"</span></button>  
-                        <!-- ontouchstart="this.classList.toggle('active');" -->
-                    </div> 
-                <div class="col-xs-6 col-sm-5 col-md-4 col-lg-4 align-items-center">                         
-                    <div class="flip-container">
-                        <div class="flipper">
-                            <div class="front">
-                                <div class="panel panel-default text-center flashcard">
-                                    <div class="panel panel-header friend-name">
-                                        Name
-                                    </div>
-                                    <div class="panel panel-body profile-photo">
-                                        <img id="profile-picture" src="" alt="friend's-profile-photo">
-                                    </div>
-                                </div>
+                <button type="button" class="btn btn-outline-primary btn-rounded btn-arrow-left">
+                    <span class="glyphicon glyphicon-menu-left" </span>
+                </button>
+                <!-- ontouchstart="this.classList.toggle('active');" -->
+            </div>
+            <div class="col-xs-6 col-sm-5 col-md-4 col-lg-4 align-items-center">
+                <div id="card">
+                    <div class="front">
+                        <div class="panel panel-default text-center flashcard">
+                            <div class="panel panel-header friend-name">
+                                Name
                             </div>
-                            <div class="back">
-                                <div class="panel panel-default backside-hints">
-                                    <div class="panel panel-header hints text-center">
-                                        Hints
-                                    </div>
-                                    <div class="panel panel-body hints">
-                                        <p class="different-hints align-center">
-                                            1. Enter Your Friend's Name <br>                                  
-                                            <input type="text"><br>
-                                            2. What Is Your Friend's Hometown? <br>
-                                            <input type="text"><br>
-                                            3. Where Does Your Friend Live Now? <br>
-                                            <input type="text">
-                                        </p>
-                                    </div>
-                                </div>
+                            <div class="panel panel-body profile-photo">
+                                <img id="profile-picture" src="" alt="friend's-profile-photo">
                             </div>
-                            <div class="front2">
-                                <div class="panel panel-default text-center flashcard">
-                                    <div class="panel panel-header friend-name">
-                                        Name
-                                    </div>
-                                    <div class="panel panel-body profile-photo">
-                                        <img id="profile-picture" src="" alt="friend's-profile-photo">
-                                    </div>
-                                </div>
+                        </div>
+                    </div>
+                    <div class="back">
+                        <div class="panel panel-default backside-hints">
+                            <div class="panel panel-header hints text-center">
+                                Hints
                             </div>
-                            <div class="back2">
-                                    <div class="panel panel-default backside-defriend">
-                                        <div class="panel panel-header defriend">
-                                            defriend Options
-                                        </div>
-                                        <div class="panel panel-body defriend-Options">
-                                            <p class="different-Options align-center">
-                                                1. Would You Like To Add This Friend To Your "defriend" List? <br>                                  
-                                                <input type="text"><br>
-                                                2. Would You Like To Add This Friend To Your "Block" List? <br>
-                                                <input type="text"><br>
-                                                3. Skip This Friend For Now <br>
-                                                <button type="button">
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
+                            <div class="panel panel-body hints">
+                                <p class="different-hints align-center">
+                                    1. Enter Your Friend's Name
+                                    <br>
+                                    <input type="text">
+                                    <br> 2. What Is Your Friend's Hometown?
+                                    <br>
+                                    <input type="text">
+                                    <br> 3. Where Does Your Friend Live Now?
+                                    <br>
+                                    <input type="text">
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="back2">
+                        <div class="panel panel-default backside-defriend">
+                            <div class="panel panel-header defriend">
+                                defriend Options
+                            </div>
+                            <div class="panel panel-body defriend-Options">
+                                <p class="different-Options align-center">
+                                    1. Would You Like To Add This Friend To Your "defriend" List?
+                                    <br>
+                                    <input type="text">
+                                    <br> 2. Would You Like To Add This Friend To Your "Block" List?
+                                    <br>
+                                    <input type="text">
+                                    <br> 3. Skip This Friend For Now
+                                    <br>
+                                </p>
+                                <button type="button" class="btn btn-outline-primary btn-rounded" id="backSubmit"></button>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 right-Button">
-                    <div class="text-center">
-                <button id="right" type="button" class="btn btn-outline-primary btn-rounded btn-arrow-right"><span class="glyphicon glyphicon-menu-right"</span></button>      
-                    </div>
-                </div>    
+            </div>
+            <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 right-Button">
+                <div class="text-center">
+                    <button id="right" type="button" class="btn btn-outline-primary btn-rounded btn-arrow-right">
+                        <span class="glyphicon glyphicon-menu-right" </span>
+                    </button>
+                </div>
+            </div>
         </div>
 
 
