added second html

--- a/defriendr.html
+++ b/defriendr.html
@@ -6,7 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-
+    <!-- favicon link -->
+    <link rel="icon" type="image/ico" href="favicons/favicon.ico">
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
@@ -31,6 +32,7 @@
                 <a class="navbar-brand" href="#">
                     <p id="title"> defriendr </p>
                 </a>
+                
                 <table cellspacing="0" role="presentation" class="login">
                     <tbody>
                         <tr>
@@ -59,81 +61,15 @@
     </nav>
 
     <div class="container">
-        <!-- <div class="row spacer"></div> -->
         <div class="row align-items-center main-content">
-            <!-- <div class="col-4 spacer">
-                bullshit
-            </div> -->
-            <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-lg-offset-3 col-md-offset-3 col-sm-offset-2 col-xs-offset-2">
-                    <button  type="button" class="btn btn-outline-primary btn-rounded btn-arrow-left"><span class="glyphicon glyphicon-menu-left"</span></button>  
-                        <!-- ontouchstart="this.classList.toggle('active');" -->
-                    </div> 
-                <div class="col-xs-6 col-sm-5 col-md-4 col-lg-4 align-items-center">                         
-                    <div class="flip-container">
-                        <div class="flipper">
-                            <div class="front">
-                                <div class="panel panel-default text-center flashcard">
-                                    <div class="panel panel-header friend-name">
-                                        Name
-                                    </div>
-                                    <div class="panel panel-body profile-photo">
-                                        <img id="profile-picture" src="" alt="friend's-profile-photo">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="back">
-                                <div class="panel panel-default backside-hints">
-                                    <div class="panel panel-header hints text-center">
-                                        Hints
-                                    </div>
-                                    <div class="panel panel-body hints">
-                                        <p class="different-hints align-center">
-                                            1. Enter Your Friend's Name <br>                                  
-                                            <input type="text"><br>
-                                            2. What Is Your Friend's Hometown? <br>
-                                            <input type="text"><br>
-                                            3. Where Does Your Friend Live Now? <br>
-                                            <input type="text">
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="front2">
-                                <div class="panel panel-default text-center flashcard">
-                                    <div class="panel panel-header friend-name">
-                                        Name
-                                    </div>
-                                    <div class="panel panel-body profile-photo">
-                                        <img id="profile-picture" src="" alt="friend's-profile-photo">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="back2">
-                                    <div class="panel panel-default backside-defriend">
-                                        <div class="panel panel-header defriend">
-                                            defriend Options
-                                        </div>
-                                        <div class="panel panel-body defriend-Options">
-                                            <p class="different-Options align-center">
-                                                1. Would You Like To Add This Friend To Your "defriend" List? <br>                                  
-                                                <input type="text"><br>
-                                                2. Would You Like To Add This Friend To Your "Block" List? <br>
-                                                <input type="text"><br>
-                                                3. Skip This Friend For Now <br>
-                                                <button type="button">
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 right-Button">
-                    <div class="text-center">
-                <button id="right" type="button" class="btn btn-outline-primary btn-rounded btn-arrow-right"><span class="glyphicon glyphicon-menu-right"</span></button>      
-                    </div>
-                </div>    
+            <div class="col-xs-3 col-sm-4 col-md-5 col-lg-6 col-xl-7 col-lg-offset-3 col-md-offset-3 col-sm-offset-2 col-xs-offset-2">
+                  <p class="login-Message">
+                      Please Login To Use Defriendr 
+                  </p>
+            </div>
         </div>
+    </div>   
+        
 
 
 
