--- a/defriendr.html
+++ b/defriendr.html
@@ -62,9 +62,9 @@
 
     <div class="container">
         <div class="row align-items-center main-content">
-            <div class="col-xs-3 col-sm-4 col-md-5 col-lg-6 col-xl-7 col-lg-offset-3 col-md-offset-3 col-sm-offset-2 col-xs-offset-2">
+            <div class="col-xs-4 col-sm-5 col-md-6 col-lg-8 col-xl-8 col-lg-offset-3 col-md-offset-3 col-sm-offset-2 col-xs-offset-2">
                   <p class="login-Message">
-                      Please Login To Use Defriendr 
+                      Please Login With Your Facebook<br> Account To Use Defriendr 
                   </p>
             </div>
         </div>
