--- a/defriendr.html
+++ b/defriendr.html
@@ -149,7 +149,8 @@
         <script type="text/javascript" src="MDB/js/bootstrap.min.js"></script>
         <!-- MDB core JavaScript -->
         <script type="text/javascript" src="MDB/js/mdb.min.js"></script>
-        <script src="public/js/app.js"></script>
+        <script src="public/js/app.js" type="text/javascript"></script>
+        <script src="server.js" type="text/javascript"></script>
         <!-- <script type="text/javascript" src="public/js/backsideContent.js"></script> -->
 </body>
 
