fixed button showing issue, still working on back content

--- a/defriendr2.html
+++ b/defriendr2.html
@@ -81,15 +81,15 @@
                                 <div class="panel panel-body defriend-Options">
                                     <p class="different-Options align-center">
                                         1. Would You Like To Add This Friend To Your "defriend" List? <br>
-                                        <button type="button" id="defriend-Button" class="btn btn-outline-primary btn-rounded waves-effect">defriend</button>
+                                        <button type="button" id="defriend-Button" class="defriend">defriend</button>
                                         <br>
                                          2. Would You Like To Add This Friend To Your "Block" List?
                                         <br>
-                                        <button type="button" id="defriend-Button" class="btn btn-outline-primary btn-rounded waves-effect">Block</button>
+                                        <button type="button" id="defriend-Button" class="block">Block</button>
                                         <br>
                                          3. Skip This Friend For Now 
                                          <br>
-                                        <button type="button" id="defriend-Button" class="btn btn-outline-primary btn-rounded waves-effect">Skip</button>
+                                        <button type="button" id="defriend-Button" class="skip">Skip</button>
                                             </p>
                                         </div>
                                     </div>
