--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
     <!-- Material Design Bootstrap -->
-    <link href="MDB/css/mdb.min.css" rel="stylesheet">
+    <link href="assets/MDB/css/mdb.min.css" rel="stylesheet">
     <!-- Your custom styles (optional) -->
-    <link href="public/css/styles.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 
 </head>
 
@@ -154,14 +154,13 @@
             crossorigin="anonymous"></script>
         <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
         <!-- Bootstrap tooltips -->
-        <script type="text/javascript" src="MDB/js/popper.min.js"></script>
+        <script type="text/javascript" src="assets/MDB/js/popper.min.js"></script>
         <!-- Bootstrap core JavaScript -->
-        <script type="text/javascript" src="MDB/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="assets/MDB/js/bootstrap.min.js"></script>
         <!-- MDB core JavaScript -->
-        <script type="text/javascript" src="MDB/js/mdb.min.js"></script>
-        <script src="public/js/app.js" type="text/javascript"></script>
-        <script src="server.js" type="text/javascript"></script>
-        <script type="text/javascript" src="public/js/appscript.js"> </script>
+        <script type="text/javascript" src="assets/MDB/js/mdb.min.js"></script>
+        <script src="js/app.js" type="text/javascript"></script>
+        <script type="text/javascript" src="/js/appscript.js"> </script>
         <!-- <script type="text/javascript" src="public/js/backsideContent.js"></script> -->
 </body>
 
