--- a/public/index.html
+++ b/public/index.html
@@ -159,10 +159,13 @@
         <script type="text/javascript" src="assets/MDB/js/bootstrap.min.js"></script>
         <!-- MDB core JavaScript -->
         <script type="text/javascript" src="assets/MDB/js/mdb.min.js"></script>
-        <!--for the facebook Api
         <script src="js/app.js" type="text/javascript"></script>
         <script type="text/javascript" src="/js/appscript.js"> </script> -->
-        <!-- <script type="text/javascript" src="public/js/backsideContent.js"></script> -->
+
+        <!--for the facebook Api
+        <script type="text/javascript" src="/js/backsideContent.js"></script>
+        <script type="text/javascript" src="/js/appscript.js"> </script> -->
+        <!--  -->
 </body>
 
 </html>
