--- a/public/index.html
+++ b/public/index.html
@@ -64,18 +64,16 @@
 
     <div class="container">
         <div class="row align-items-center main-content">
-<<<<<<< HEAD
             <div class="col-xs-4 col-sm-5 col-md-6 col-lg-8 col-xl-8 col-lg-offset-3 col-md-offset-3 col-sm-offset-2 col-xs-offset-2">
                   <p class="login-Message">
                       Please Login With Your Facebook<br> Account To Use Defriendr
                   </p>
-=======
             <!-- <div class="col-4 spacer">
                 bullshit
             </div> -->
             <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-lg-offset-3 col-md-offset-3 col-sm-offset-2 col-xs-offset-2">
                 <button type="button" class="btn btn-outline-primary btn-rounded btn-arrow-left">
-                    <span class="glyphicon glyphicon-menu-left" </span>
+                    <span class="glyphicon glyphicon-menu-left"></span>
                 </button>
                 <!-- ontouchstart="this.classList.toggle('active');" -->
             </div>
@@ -136,10 +134,9 @@
             <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 right-Button">
                 <div class="text-center">
                     <button id="right" type="button" class="btn btn-outline-primary btn-rounded btn-arrow-right">
-                        <span class="glyphicon glyphicon-menu-right" </span>
+                        <span class="glyphicon glyphicon-menu-right"></span>
                     </button>
                 </div>
->>>>>>> master
             </div>
         </div>
     </div>
@@ -160,11 +157,12 @@
         <!-- MDB core JavaScript -->
         <script type="text/javascript" src="assets/MDB/js/mdb.min.js"></script>
         <script src="js/app.js" type="text/javascript"></script>
-        <script type="text/javascript" src="/js/appscript.js"> </script> -->
+        <script type="text/javascript" src="/js/appscript.js"> </script>
 
-        <!--for the facebook Api
+        <!--for the facebook Api-->
+
         <script type="text/javascript" src="/js/backsideContent.js"></script>
-        <script type="text/javascript" src="/js/appscript.js"> </script> -->
+        <script type="text/javascript" src="/js/appscript.js"> </script> 
         <!--  -->
 </body>
 
