--- a/public/index.html
+++ b/public/index.html
@@ -64,12 +64,10 @@
 
     <div class="container">
         <div class="row align-items-center main-content">
-<<<<<<< HEAD
             <div class="col-xs-4 col-sm-5 col-md-6 col-lg-8 col-xl-8 col-lg-offset-3 col-md-offset-3 col-sm-offset-2 col-xs-offset-2">
                   <p class="login-Message">
                       Please Login With Your Facebook<br> Account To Use Defriendr
                   </p>
-=======
             <!-- <div class="col-4 spacer">
                 bullshit
             </div> -->
@@ -139,7 +137,6 @@
                         <span class="glyphicon glyphicon-menu-right" </span>
                     </button>
                 </div>
->>>>>>> master
             </div>
         </div>
     </div>
@@ -161,8 +158,8 @@
         <script type="text/javascript" src="MDB/js/mdb.min.js"></script>
         <script src="public/js/app.js" type="text/javascript"></script>
         <script src="server.js" type="text/javascript"></script>
-        <script type="text/javascript" src="public/js/appscript.js"> </script>
-        <!-- <script type="text/javascript" src="public/js/backsideContent.js"></script> -->
+        <script type="text/javascript" src="public/js/appScript.js"> </script>
+        
 </body>
 
 </html>
