--- a/public/home.html
+++ b/public/home.html
@@ -33,6 +33,7 @@
         <!-- MDB core JavaScript -->
         <script type="text/javascript" src="MDB/js/mdb.min.js"></script>
         <script src="public/js/app.js" type="text/javascript"></script>
+        <script src="public/js/appscript.js" type="text/javascript"></script>
         <!-- <script type="text/javascript" src="public/js/backsideContent.js"></script> -->
 </body>
 
