Skip generates first person

--- a/public/index.html
+++ b/public/index.html
@@ -135,7 +135,7 @@
               <!--Grid column middle-->
               <div class="col-lg-4 col-md-12 card-body text-center">
               <button type="button" class="btn aqua-gradient btn-primary btn-rounded waves-effect">Guess</button>
-              <button type="button" class="btn orange-gradient btn-secondary btn-rounded waves-effect">Skip</button>
+              <button type="button" class="btn orange-gradient btn-secondary btn-rounded waves-effect" id="newGuy">Skip</button>
             </div>
             <!--Grid column middle-->
             <!--Grid column right-->
